# echolog

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  OWNERSHIP.md  README.md  docker-compose.yml  meeting_intelligence_engine_spec.md  pyproject.toml
.github/workflows/: ci.yml
assets/: README.md  architecture.md
eval/rag_qa/: ES2004a.json  ES2008a.json  ES2010a.json  ES2013a.json  ES2016b.json  all_meetings_qa.json
eval/results/: ami_eval_all_meetings_en.json  rag_eval_results.json
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AnalyticsTab.tsx  AskTab.tsx  CrossMeetingPanel.tsx  MeetingDetail.tsx  OverviewTab.tsx  Sidebar.tsx  ThemeToggle.tsx  TranscriptTab.tsx  UploadModal.tsx
frontend/components/ui/: tabs.tsx
frontend/lib/: api.ts  toast.tsx
src/meeting_intelligence_engine/: __init__.py  audio.py  cli.py  config.py  db.py  exporters.py  logging_config.py  models.py  prompts.py
src/meeting_intelligence_engine/api/: deps.py  main.py  schemas.py
src/meeting_intelligence_engine/core/: interfaces.py  schemas.py
src/meeting_intelligence_engine/eval/: __init__.py  ami.py  cli.py  rag.py  rag_cli.py
src/meeting_intelligence_engine/implementations/: local_pipeline.py
src/meeting_intelligence_engine/rag/: __init__.py  (+4 more)
tests/: conftest.py  test_api.py  test_eval_ami.py  test_eval_rag.py  test_pipeline.py  test_privacy.py
tests/integration/: test_api.py  test_privacy.py
tests/unit/: test_eval_ami.py  test_eval_rag.py  test_pipeline.py  test_rag.py
(+20 files in other folders)
